--- a/app/src/main/res/layout/activity_set_alarm.xml
+++ b/app/src/main/res/layout/activity_set_alarm.xml
@@ -4,6 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.notifications.SetAlarmActivity">
+    tools:context=".ui.notifications.SetAlarmActivity"
+    android:padding="@dimen/activity_horizontal_margin">
+
+    <HorizontalScrollView
+        android:id="@+id/hsv_alarmScroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_setAlarmTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="@string/set_alarm_time"
+                    android:textSize="20dp"
+                    android:gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:paddingBottom="@dimen/activity_vertical_margin"/>
+
+                <TimePicker
+                    android:id="@+id/tp_alarmTime"
+                    android:timePickerMode="clock"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_setAlarmTime" />
+            </LinearLayout>
+
+<!--    위 레이아웃의 가로 폭이 왜 좁게 설정되는지 알아야하고, 이후 정류장 및 버스 선택 부분 작성        -->
+
+
+        </LinearLayout>
+
+
+    </HorizontalScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
