--- a/app/src/main/res/layout/activity_set_alarm.xml
+++ b/app/src/main/res/layout/activity_set_alarm.xml
@@ -7,49 +7,131 @@
     tools:context=".ui.notifications.SetAlarmActivity"
     android:padding="@dimen/activity_horizontal_margin">
 
-    <HorizontalScrollView
-        android:id="@+id/hsv_alarmScroll"
+    <LinearLayout
+        android:id="@+id/ll_btns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_marginTop="30dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
 
-        <LinearLayout
+<!--        Clickable이 달라지도록. 선택되어서 하단 contents width가 변경되면 해당 contents 버튼은 false.-->
+
+        <Button
+            android:id="@+id/btn_busStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:text="@string/title_busStop"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:clickable="false"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <Button
+            android:id="@+id/btn_setRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_route"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"/>
 
-                <TextView
-                    android:id="@+id/tv_setAlarmTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:text="@string/set_alarm_time"
-                    android:textSize="20dp"
-                    android:gravity="center"
-                    android:layout_marginTop="30dp"
-                    android:paddingBottom="@dimen/activity_vertical_margin"/>
+        <Button
+            android:id="@+id/btn_setTiming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_notifications"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_weight="1" />
 
-                <TimePicker
-                    android:id="@+id/tp_alarmTime"
-                    android:timePickerMode="clock"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_setAlarmTime" />
-            </LinearLayout>
+    </LinearLayout>
 
-<!--    위 레이아웃의 가로 폭이 왜 좁게 설정되는지 알아야하고, 이후 정류장 및 버스 선택 부분 작성        -->
+    <LinearLayout
+        android:id="@+id/ll_setBusStop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_btns"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_setAlarmBusStop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/set_alarm_busStop"
+            android:textSize="20sp"/>
 
-        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_setAlarmStation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
+    </LinearLayout>
 
-    </HorizontalScrollView>
+    <LinearLayout
+        android:id="@+id/ll_setBus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_btns"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_setAlarmBus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/set_alarm_bus"
+            android:textSize="20sp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_setAlarmBus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_setAlarm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_btns"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_setAlarmTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/set_alarm_time"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+
+        <TimePicker
+            android:id="@+id/tp_alarmTime"
+            android:timePickerMode="clock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_setAlarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/save"
+        android:textSize="20sp"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
