--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,13 +8,13 @@
     <fragment
         android:id="@+id/navigation_busStop"
         android:name="com.mally.ch02.waitHater.ui.BusStopInfo.AllBusStopsFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_busStop"
         tools:layout="@layout/fragment_all_bus_stops" />
 
     <fragment
         android:id="@+id/navigation_routes"
         android:name="com.mally.ch02.waitHater.ui.BusInfo.AllRoutesFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_route"
         tools:layout="@layout/fragment_all_routes" />
 
     <fragment
