--- a/app/src/main/res/layout/fragment_all_routes.xml
+++ b/app/src/main/res/layout/fragment_all_routes.xml
@@ -24,6 +24,7 @@
         android:id="@+id/rv_routes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_routes"
