--- a/app/src/main/res/layout/fragment_all_routes.xml
+++ b/app/src/main/res/layout/fragment_all_routes.xml
@@ -23,11 +23,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_routes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_routes"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/et_routes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
