--- a/app/src/main/res/layout/item_bus.xml
+++ b/app/src/main/res/layout/item_bus.xml
@@ -11,25 +11,25 @@
 
         <TextView
             android:id="@+id/tv_busItem_num"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="노선번호"
             android:layout_marginRight="2dp"
             android:background="#FFEED4"/>
 
         <TextView
             android:id="@+id/tv_busItem_dir"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:textSize="20sp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="방향"
             android:paddingLeft="10dp"
