예제 기반으로 api데이터 받아오기 구현중...(4) 1. 노선 전체 목록 받아오기 구현  - 정류장 목록들이 null로 받아지는 현상 해결 필요. 2. 노선 클릭시 해당 노선의 정류장 목록 구현  - 해당 노선이 아닌 position에 해당하는 정류장 목록이 구현되는 현상 해결 필요.

--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.BusInfo.RouteInfoActivity">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/layout_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabGravity="center"
+        app:tabMode="fixed"
+        app:tabTextColor="#000000"
+        app:tabSelectedTextColor="@color/design_default_color_primary"
+        app:tabIndicatorColor="@color/design_default_color_primary"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ScrollView
+        android:id="@+id/scroll_routeInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/layout_tab">
+
+        <com.mally.ch02.waitHater.ui.BusInfo.RouteInfoViewPager
+            android:id="@+id/pager_routeInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
