--- a/app/src/main/res/layout/item_bus_stop.xml
+++ b/app/src/main/res/layout/item_bus_stop.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_busItem_num"
+            android:id="@+id/tv_stationName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
@@ -13,7 +13,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="정류장 이름"
-            android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
             android:background="#FFEED4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
